fixing Logo and services cards

--- a/src/components/globals/Navbar/Navbar.css
+++ b/src/components/globals/Navbar/Navbar.css
@@ -9,7 +9,9 @@ nav {
   margin-top: 1rem;
   transition: 0.2s;
 }
-
+.logo {
+  padding-top: 1rem;;
+}
 .active {
   background: #313131;
   margin-top: 0;
